crates/uitest/fixtures/mir_check/noesc_storage_escape_inline_init.snap
---
source: crates/uitest/tests/mir_check.rs
assertion_line: 32
expression: res
input_file: fixtures/mir_check/noesc_storage_escape_inline_init.fe
---
error[11-0001]: cannot store `Esc` in `Storage`
   ┌─ noesc_storage_escape_inline_init.fe:13:9
   │
13 │         slot = Esc { h: mut x, tag: 0 }
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this value cannot be written to `Storage`
   │
   = note: this value contains a borrow handle (`mut`/`ref`)
